修订代码中的错误，重新打包可执行jar文件

--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,10 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.netbeans.api', name: 'org-openide-awt', version: 'RELEASE113'
+	implementation  group: 'org.netbeans.api', name: 'org-openide-awt', version: 'RELEASE113'
 //    compile group: 'org.jfree', name: 'jfreechart', version: '1.0.13'
-    compile group: 'org.jfree', name: 'jfreechart', version: '1.0.14'
-    runtime files ('lib/images.jar')
+	implementation  group: 'org.jfree', name: 'jfreechart', version: '1.0.14'
+    runtimeOnly files ('lib/images.jar')
 }
 
 sourceSets {
@@ -37,3 +37,5 @@ sourceSets {
 application {
     mainClassName = 'studio.core.Studio'
 }
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
